--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Pane 1: Introduction of the Character -->
     <section id="pane1" class="pane">
         <img src="/images/panel_1_background.png" alt="Expansive Background" class="background-image">
-        <img src="/images/character_no_background.png" alt="Character" id="character">    
+        <img src="/images/character_no_background.png" alt="Character" class="character" id="character">    
     </section>
 
     <!-- Pane 2: AI as a Transformative Force -->
