--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+    <header id="myHeader">
+        <nav>
+            <ul>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#login">Login</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+
     <!-- Pane 1: Introduction of the Character -->
     <section id="pane1" class="pane">
         <img src="/images/panel_1_background.png" alt="Expansive Background" class="background-image">
